Domains: Add a domain suggestion for transfer/map

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -95,6 +95,7 @@
 @import 'components/date-picker/style';
 @import 'components/dialog/style';
 @import 'components/domains/domain-mapping-suggestion/style';
+@import 'components/domains/domain-transfer-suggestion/style';
 @import 'components/domains/domain-product-price/style';
 @import 'components/domains/domain-search-results/style';
 @import 'components/domains/domain-suggestion/style';
