--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -101,6 +101,7 @@
 @import 'components/domains/domain-suggestion/style';
 @import 'components/domains/example-domain-suggestions/style';
 @import 'components/domains/map-domain-step/style';
+@import 'components/domains/transfer-domain-step/style';
 @import 'components/domains/register-domain-step/style';
 @import 'components/domains/registrant-extra-info/style';
 @import 'components/drop-zone/style';
